[package]
name = "rust-HttpServer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
threadpool = "1.8.1"                             # concurrent
flate2 = "1.1.2"                                 # gzip